force-app/main/default/objects/Contract/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>This field denotes the Billing Subsidiary for this contract for the Account to Customer sync in NetSuite,</description>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsidiary</valueSetName>
    </valueSet>
</CustomField>