force-app/main/default/objects/Contract/fields/Superseded_by_OSA_2__c.field-meta.xml
<CustomField>
    <fullName>Superseded_by_OSA_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded by (OSA) 2</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Superseded by (OSA) additional)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>