force-app/main/default/objects/Contract/fields/Support_SLA__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA__c</fullName>
    <label>Support SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>