force-app/main/default/objects/Contract/fields/Support_Stream__c.field-meta.xml
<CustomField>
    <fullName>Support_Stream__c</fullName>
    <label>Support Stream</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>