force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Software Only</fullName>
            </value>
            <value>
                <fullName>Software Co-Term</fullName>
            </value>
            <value>
                <fullName>Services Change Order</fullName>
            </value>
            <value>
                <fullName>Services Change Order (Internal)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Repstor G-Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>