force-app/main/default/objects/Contract/recordTypes/PartnerEvalContract.recordType-meta.xml
<RecordType>
    <fullName>PartnerEvalContract</fullName>
    <active>false</active>
    <description>Contract information for appliances associated with partnerships or evals</description>
    <label>Partner/Eval Contract</label>
</RecordType>