force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Old_Contract_Reference__c</columns>
    <columns>OP4I_Contract_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.NAME</field>
        <operation>contains</operation>
        <value>OnePlace</value>
    </filters>
    <label>OnePlace Contracts by OSA #</label>
</ListView>