force-app/main/default/objects/Contract/listViews/AllDraftContracts.listView-meta.xml
<ListView>
    <fullName>AllDraftContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>All Draft Contracts</label>
</ListView>