force-app/main/default/objects/Contract/listViews/Contracts_with_Service_Projects.listView-meta.xml
<ListView>
    <fullName>Contracts_with_Service_Projects</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SFDC_Services_Project__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFDC_Services_Project__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contracts with Service Projects</label>
</ListView>