force-app/main/default/objects/Contract/listViews/Expiring_Within_90_Days.listView-meta.xml
<ListView>
    <fullName>Expiring_Within_90_Days</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>In Force</value>
    </filters>
    <filters>
        <field>SBQQ__RenewalForecast__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Expiring Within 90 Days</label>
</ListView>