force-app/main/default/objects/Contract/listViews/In_Force_Contracts.listView-meta.xml
<ListView>
    <fullName>In_Force_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>In Force</value>
    </filters>
    <label>In Force Contracts</label>
</ListView>