force-app/main/default/objects/Contract/listViews/Migrated_Contracts.listView-meta.xml
<ListView>
    <fullName>Migrated_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Old_Contract_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Latham &amp; Watkins LLP</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>In Force</value>
    </filters>
    <filters>
        <field>Old_Contract_Reference__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Migrated Contracts</label>
</ListView>